调整模块名称，细节调整

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
-    <title>极快科技-专注于时空大数据与空间智能</title>
+    <title>极快科技-时空大数据与空间智能专家</title>
   </head>
 
   <body>
